# mkbot

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  Procfile  README.md  alembic.ini  crowdin.yml  dangerfile.ts  ipad.txt  mkbot.py  nodemon.json  package.json  product.json  pyproject.toml  requirements.txt  requirements_msu.txt  runtime.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/flags/: release.flag
.github/workflows/: analysis.yml  beta-release.yml  build.yml  canary-release.yml  codeql-analysis.yml  crowdin_download.yml  crowdin_upload.yml  danger.yml  stable-release.yml
.gitlab/issue_templates/: Bug.md  Feature Request.md
.gitlab/merge_request_templates/: Merge Request.md  Merge_Request.md
.resources/canary/: MKBot-Canary.VisualElementsManifest.xml
changelogs/: README.md
changelogs/unreleased/: 10-Add-conversation-mode-to-translation-command.yml  105-add-generate-command-in-local-shell.yml  105-add-highlighter-command-in-discord-bot.yml  105-improve-local-shell-design.yml  166-security-update-cve-2022-2309.yml  17-Improve-msu.yml  211-music-command-fix-+-lotto-command.yml  237-added-chat-mode-in-discord-bot.yml  237-added-google-command-in-discord-bot.yml  25-Added-Music-Commands.yml  257-update-yt-dlp-to-2023.09.24.yml  261-autoplay-function-in-music-command.yml  29-Play-and-Skip-bug-fix.yml  7-Migrate-from-GitLab.yml  75-improve-auto-update.yml  83-add-local-shell.yml  Add-ping-command.yml  Fix-MGCert-to-display-permission-denied-message.yml  Fix-play-command-to-display-usage-error-when-user-is-not-participating-in-voice-channel.yml  Remove-the-install-command-to-improve-functionality-in-the-future.yml  add-clock-command-to-show-live-world-time.yml  add-dday-command.yml  add-minigames.yml  add-news-command.yml  add-repeat-command-to-local-shell.yml  add-roll-command.yml  add-server-mode.yml  add-timezone-command-to-show-user's-local-time.yml  add-url-command-in-discord-bot.yml  add-voice-command.yml  added-help-command-in-local-shell.yml  apply-a-new-logo.yml  change-the-permission-to-use-the-delete-command-to-admin-level.yml  fix-minor-bugs.yml  fix-music-commands.yml  fix-runtime-error.yml  fix-the-connectonstart-option-bug.yml  improve-music-command-user-experience.yml  improve-roulette-command-using-generative-ai.yml  mk-bot-is-now-available-in-korean.yml  (+9 more)
extensions/: extensions.json
locales/: mkbot.pot
migrations/: README.md  env.py
migrations/versions/: 01ca5c43ac9d_.py  20211223154204_d7cee7a58811_initialize.py  20211223175358_73bce8369050_add_hash_store.py  20211226002031_01ca5c43ac9d_.py  20220410182418_4d725f5aaa69_add_bot_id.py  20220410184331_acb836072af7_rename_table.py  20220410192308_c1f44c3ebcba_add_event_logs.py  20220424095553_a98fe9de1c67_add_command_type.py  20220424111526_c2482c189142_add_timezone.py  20221219175134_fcdada5cf898_add_locale.py  20230111114959_ab4b02ba328c_add_update_at_and_create_at_to_hashstore.py  4d725f5aaa69_add_bot_id.py  c1f44c3ebcba_add_event_logs.py  c2482c189142_add_timezone.py
package/: MKBot.VisualElementsManifest.xml  MKBot.iss  MKBot.nsi  ghtool.py  hash.py  tool.py  vc.py
package/data/: config.json  extensions.json  mgcert.json  version.json
package/i18n/: Korean.isl
package/info/: version.json
public/: config.schema  config.schema.json  extensions.schema  index.html  version.json
resources/: MKBot-OSS.VisualElementsManifest.xml
samples/extensions/: extensions.json
scripts/: analysis.bat  analysis.sh  build.bat  changelog.bat  changelog.sh  dep.bat  dep.sh  discord-host.bat  discord-host.sh  env.bat  gettext.bat  gettext.sh  idle.bat  mdk.bat  mkbot.bat  prepare.bat  prepare.sh  unittest.bat  venv.bat
src/: MGCert.py  MKBot.py
src/bot/: APIKey.py  MGCert.py  MsgFormat.py  api.py  app.py  app.spec  command_help.py  core_ext.py  discord_ext.py  discord_host.py  main.py  main.spec  release.py  shell_host.py  views.py
src/console/: InfoForm.Designer.cs  InfoForm.cs  InfoForm.resx  LogListener.cs  MKBot.sln  MKBotCoreManager.cs  MyNotificationActivator.cs  Paths.cs  Program.cs  SchtasksUtils.cs  ShellForm.Designer.cs  ShellForm.cs  TrayApp.cs  Utils.cs  Version.cs  console.csproj  console.sln
src/hooks/: hook-alembic.py  hook-babel.py  hook-discord.py  hook-langdetect.py  hook-mkbot_nlu.py  hook-mulgyeol_oauth.InstalledAppFlow.py  hook-nacl.py  hook-yt_dlp.py
src/msu/: MKBotUpdate.xml  MulgyeolUpdateService.py  (+3 more)
test/: extensions.json
tests/: __init__.py  conftest.py
tools/: pygettext.py
(+112 files in other folders)
