[tool.isort]
profile = "black"
src_paths = ["src/bot", "src/lib", "src/update", "tests"]

[tool.pytest.ini_options]
pythonpath = ["./src/bot", "./src/lib", "./src/update"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mkbot"
version = "0.1.0"
description = "Local-Hosted Discord Bot"
authors = ["Mycroft Kang <thkang0629@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
aiofiles = "0.8.0"
alembic = "1.9.1"
babel = "2.11.0"
bs4 = "0.0.1"
discord-py = "2.2.2"
mulgyeol-bot-framework = {git = "https://github.com/MycroftKang/mulgyeol-bot-framework.git", rev = "a63ebb1791558c04efff363b38012c290ae06bc5"}
langdetect = "1.0.9"
lxml = "4.9.1"
packaging = ">=20.0,<21.0"
pyinstaller = "5.8.0"
pynacl = "1.5.0"
pytz = "2022.1"
pyyaml = "6.0"
requests = "2.28.2"
simpleaudio = "1.0.4"
sqlalchemy = "1.4.46"
yt-dlp = "2023.03.03"
mulgyeol-telemetry = {git = "https://github.com/MycroftKang/application-insights-python.git", rev = "c123c9b165faa8afe1fe3bf9a6b76a7b9afae0ce", optional = true}
mkbot-nlu = [
    {git = "https://github.com/mgylabs/mkbot-nlu.git", rev = "7bbb76125a827581020fc1618192382ecaff9d62"},
    {git = "https://github.com/mgylabs/mkbot-nlu.git", rev = "7bbb76125a827581020fc1618192382ecaff9d62", extras = ["full"], optional = true},
]

[tool.poetry.dev-dependencies]
black = "22.3.0"
debugpy = "1.6.5"
flake8 = "6.0.0"
pre-commit = "3.2.1"
pylint = "2.15.10"
pytest = "7.2.0"
pytest-asyncio = "0.20.3"
pytest-mock = "3.10.0"

[tool.poetry.extras]
release = ["mulgyeol-telemetry"]
full = ["mkbot-nlu"]
