[tool.isort]
profile = "black"
src_paths = ["src/bot", "src/lib", "src/update", "tests"]

[tool.pytest.ini_options]
pythonpath = ["./src/bot", "./src/lib", "./src/update"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mkbot"
version = "0.1.0"
description = "Local-Hosted Discord Bot"
authors = ["Mycroft Kang <thkang0629@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
aiofiles = "0.8.0"
alembic = "1.13.1"
babel = "2.11.0"
beautifulsoup4 = "4.12.3"
discord-py = "2.3.2"
mulgyeol-bot-framework = {git = "https://github.com/MycroftKang/mulgyeol-bot-framework.git", rev = "a63ebb1791558c04efff363b38012c290ae06bc5"}
langdetect = "1.0.9"
lxml = "5.1.0"
packaging = "23.2"
pyinstaller = "6.2.0"
pynacl = "1.5.0"
pytz = "2022.1"
pyyaml = "6.0"
requests = "2.28.2"
sqlalchemy = "1.4.46"
yt-dlp = "2023.09.24"
mulgyeol-telemetry = {git = "https://github.com/MycroftKang/application-insights-python.git", rev = "c03c4d415b15648134717bb402d895d9b7ebea57", optional = true}

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
debugpy = "^1.8.0"
flake8 = "6.0.0"
pre-commit = "2.17.0"
pylint = "2.15.10"
pytest = "7.4.3"
pytest-asyncio = "0.23.2"
pytest-mock = "3.10.0"
ipykernel = "^6.27.1"
watchdog = "^3.0.0"

[tool.poetry.extras]
release = ["mulgyeol-telemetry"]
