[tool.isort]
profile = "black"
src_paths = ["src/bot", "src/lib", "src/update", "tests"]

[tool.pytest.ini_options]
pythonpath = ["./src/bot", "./src/lib", "./src/update"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mkbot"
version = "0.1.0"
description = "Local-Hosted Discord Bot"
authors = ["Mycroft Kang <thkang0629@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
aiofiles = "0.8.0"
alembic = "1.13.1"
babel = "2.11.0"
beautifulsoup4 = "4.12.3"
discord-py = "2.6.3"
mulgyeol-bot-framework = {git = "https://github.com/MycroftKang/mulgyeol-bot-framework.git", rev = "a63ebb1791558c04efff363b38012c290ae06bc5"}
langdetect = "1.0.9"
lxml = "5.1.0"
packaging = "23.2"
pyinstaller = "6.14.2"
pynacl = "1.5.0"
pytz = ">=2022.1"
pyyaml = "6.0.2"
requests = "2.32.3"
sqlalchemy = "1.4.46"
yt-dlp = "^2025.12.8"
mulgyeol-telemetry = {git = "https://github.com/MycroftKang/application-insights-python.git", rev = "c03c4d415b15648134717bb402d895d9b7ebea57", optional = true}
gtts = "^2.5.1"
google-genai = "1.36.0"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
debugpy = "^1.8.0"
flake8 = "7.3.0"
pre-commit = "2.17.0"
pylint = "3.3.8"
pytest = "8.3.4"
pytest-asyncio = "0.25.3"
pytest-mock = "3.14.0"
ipykernel = "^6.27.1"
watchdog = "^3.0.0"

[tool.poetry.extras]
release = ["mulgyeol-telemetry"]
